Add slides & figures

--- a/LSD/references.bib
+++ b/LSD/references.bib
@@ -18,3 +18,25 @@
   year={1983},
   publisher={The University of Chicago Press}
 }
+
+@article{bao2011illiquidity,
+  title={The illiquidity of corporate bonds},
+  author={Bao, Jack and Pan, Jun and Wang, Jiang},
+  journal={The Journal of Finance},
+  volume={66},
+  number={3},
+  pages={911--946},
+  year={2011},
+  publisher={Wiley Online Library}
+}
+
+@article{amihud2002illiquidity,
+  title={Illiquidity and stock returns: cross-section and time-series effects},
+  author={Amihud, Yakov},
+  journal={Journal of financial markets},
+  volume={5},
+  number={1},
+  pages={31--56},
+  year={2002},
+  publisher={Elsevier}
+}
