--- a/LSD/LSD_slides.tex
+++ b/LSD/LSD_slides.tex
@@ -71,7 +71,7 @@ Research fellow, Nethermind
         \item The Merge (Sep 2022): Ethereum migrated from PoW to PoS\\
         $\Rightarrow$ Now anyone can stake $32\Xi$ on mainnet and accrue rewards as a validator
         \bigskip
-        \item The Shapella/Shanghai Upgrade (Apr 2023) \\
+        \item The Shanghai/Capella Upgrade (Apr 2023) \\
         $\Rightarrow$ Introduced option to withdraw staked ETH (unstake)
     \end{itemize}
 
@@ -110,15 +110,15 @@ Research fellow, Nethermind
 \end{frame}
 
 \begin{frame}{Liquid Staking Derivatives (LSDs)}
-    Actors: stakers, staking pools, node operators
-    \begin{enumerate}
-        \item Stakers deposit ETH into staking pools in exchange for LSDs
-        \item Staking pools delegate batches of $32\Xi$ to NOs to run Ethereum validators and earn staking rewards
-        \item LSDs can be traded on AMMs, used as DeFi collateral, etc.
+    ERC-20 tokens that represent ETH tokens locked in PoS contracts. 
+    \begin{itemize}
+        \item Benefits of LSD: yields staking rewards \& has liquidity
+        \item Liquid use cases: borrowing/lending, trading portfolio collateral, etc.
         \item LSDs are redeemable for ETH at any time
-    \end{enumerate}
+        \item Most LSDs accrue rewards automatically i.e. \textbf{holding LSDs is equivalent to staking ETH in the pool}
+    \end{itemize}
     \bigskip
-    Most LSDs accrue rewards automatically i.e. \textbf{holding LSDs is equivalent to staking ETH in the pool}
+    
 \end{frame}
 
 \begin{frame}{LSDs saw huge growth after Shapella}
@@ -131,61 +131,124 @@ Research fellow, Nethermind
 \end{frame}
 
 %----------------
-\section{Economic Analysis}
+\section[Economic Analysis]{Economic \& Financial Risk Analysis of LSDs}
 \begin{frame}{Liquid Staking Pools as Banks}
 
-    \footnotemark Banks are financial intermediaries which creates liquidity by:
+    \footnotemark Banks are financial intermediaries which create liquidity by:
 
     \begin{itemize}
-        \item Holding liquid funds (e.g. customer deposits) as liabilities
-        \item Investing in illiquid investment projects (e.g. loans, bonds) as assets
+        \item Gathering liquid funds (e.g. customer deposits) as liabilities
+        \item Holding illiquid investment projects (e.g. loans, bonds) as assets
+    \end{itemize}
+    \bigskip
+    Similarly, LSD protocols create liquidity by:
+    \begin{itemize}
+        \item Gathering liquid funds (ETH) as liabilities
+        \item Holding in illiquid investment projects (Ethereum staking) as assets
     \end{itemize}
 
-    % use columns
-    \begin{tabular}{|c|c|c|}
-        \hline
-         & Banks & Liquid Staking Pools \\
-        \hline
-        Invests in & Loans & ETH validators \\
-        \hline
-        Deposits & Checking accounts & ETH deposits \\
-        \hline
-    \end{tabular}
+    % % use columns
+    % \begin{tabular}{|c|c|c|}
+    %     \hline
+    %      & Banks & Liquid Staking Pools \\
+    %     \hline
+    %     Invests in & Loans & ETH validators \\
+    %     \hline
+    %     Deposits & Checking accounts & ETH deposits \\
+    %     \hline
+    % \end{tabular}
 
 \footnotetext{Diamond and Dybvig (1983) Theory of Banking}
 \end{frame}
 
-\begin{frame}{Supply and Demand Analysis}
+% \begin{frame}{Supply and Demand Analysis}
     
+% \end{frame}
+
+\begin{frame}{How Much Liquidity do LSDs Provide?}
+    Introducing two quantitative measures of (il)liquidity:\\
+    \textcircled{1} Amihud (2002):
+    $AMD_{id} = \frac{1}{N_id}\sum_{t=1}^{N_{id}}\frac{|r_{it}|}{V_t}$
+    \begin{figure}
+        \centering
+        \includegraphics[width=\textwidth]{figures/liq_AMD.png}
+    \end{figure}
 \end{frame}
 
-\begin{frame}{How Liquid are LSDs, Really?}
-    Introducing quantitative measures of liquidity\\
-    queues
+\begin{frame}
+    \textcircled{2} Bao, Pan, and Wang (2011): $\gamma_i = -Cov(\Delta p_{it}, \Delta p_{it-1})$
+    \begin{figure}
+        \centering
+        \includegraphics[width=\textwidth]{figures/liq_BPW.png}
+    \end{figure}
 \end{frame}
 
-
-\begin{frame}{Risks}
+\begin{frame}{LSD Bank Run}
+    Bank runs are typically triggered by 1. sudden increase in demand for liquidity 2. expectation of insolvency.\\  
+    \bigskip
+    What could trigger a bank run on LSDs?
     \begin{itemize}
-        \item Liquidity risk: e.g. CRV exploit July 2023
-        \item Price risk: e.g. ETH price drop
-        \item Bank runs
+        \item Liquidity shortage: e.g. CRV exploit July 2023 where multiple liquidity pools were drained
+        \item ETH price drop
+        \item Regulatory crackdown: e.g. SEC deems LSDs as securities
+        \item Large-scale slashing of validators
+        \item Bugs/exploits/hacks causing insolvency
     \end{itemize}
 \end{frame}
 
-
-\begin{frame}{More Risks}
+\begin{frame}{Withdrawl of Staked ETH}
     \begin{itemize}
-        \item APR drop
+        \item Step 1: Exit queue -- only 10 validators can exit per epoch ($\approx$2225 validators or 0.5\% circulating supply per day).
+        \item Step 2: Withdrawl queue -- same queue with partial withdrawls but is processed much slower
+    \end{itemize}
+    \begin{figure}
+        \centering
+        \includegraphics[width=0.8\textwidth]{figures/rated_queues.png}
+    \end{figure}
+    \tiny{source: \href{https://www.rated.network/overview?network=mainnet&timeWindow=30d&rewardsMetric=average}{Rated Network}}\\
+    https://notes.ethereum.org/@launchpad/withdrawals-faq
+\end{frame}
+
+
+\begin{frame}{Where LSD Liquidity Exist}
+    LSD liquidity in DEXes
+    LSD liquidity in protocols
+\end{frame}
+
+\begin{frame}{Systemic Risks}
+    \begin{itemize}
+        \item Centralization of stake: Nethermind and Lido are collaborating to solve this!
+        \item APR drop from overstaking
         \item Inflationary ETH
     \end{itemize}
 \end{frame}
 
 %----------------
-\section{Research Insights}
+\section[Research Insights]{The Latest in LSD Research}
 
-\begin{frame}{LSD Risk Simulations}
+\begin{frame}{Rocket Pool Agent-Based Model \& Simulation}
+    I've been building an agent-based simulation model for Rocket Pool to study and improve their protocol design. Areas I focused on include:\\
+    \begin{itemize}
+        \item rETH and RPL tokenomics
+        \item Behavior of node operators
+        \item Response to external risks
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{Thank You!}
+    Connect with me:\\ 
+    \begin{itemize}
+        \item Check out \href{https://www.mingxuanhe.xyz/}{mingxuanhe.xyz} for more research projects on empirical DeFi, tokenomics design \& optimization, and computational methods
+        \item Twitter: \href{https://twitter.com/MingXDynasty}{@MingXDynasty}
+        \item Telegram: \href{https://t.me/mingxdynasty}{@MingXDynasty}
+        \item Linkedin: \href{https://www.linkedin.com/in/mingxuanhe/}{Mingxuan He}
+    \end{itemize}
+
+    \bigskip
     
+    Support my community-funded research grant on Gitcoin: \\
+    \href{https://explorer.gitcoin.co/\#/round/10/0xc5fdf5cff79e92fac1d6efa725c319248d279200/0xc5fdf5cff79e92fac1d6efa725c319248d279200-0}{\underline{Gitcoin Grants Explorer}}
+
 \end{frame}
 
 \section*{}
