add reth liquidity data

--- a/LSD/references.bib
+++ b/LSD/references.bib
@@ -40,3 +40,24 @@
   year={2002},
   publisher={Elsevier}
 }
+
+@article{nethermind2023ethereum,
+  author          = {Nethermind.eth},
+  title           = {Ethereum Withdrawals and Liquid Staking},
+  year            = {2023},
+  url             = {https://medium.com/nethermind-eth/ethereum-withdrawals-and-liquid-staking-68f0d50bbb81}
+}
+
+@article{nethermind2023liquid,
+    author          = {Nethermind.eth},
+    title           = {The Liquid Staking Rush},
+    year            = {2023},
+    url             = {https://medium.com/nethermind-eth/the-liquid-staking-rush-1977aef2bad0}
+}
+
+@article{nethermind2023path,
+    author          = {Nethermind.eth},
+    title           = {A Path to Permissionless Liquid Staking},
+    year            = {2023},
+    url             = {https://medium.com/nethermind-eth/a-path-to-permissionless-liquid-staking-9934557f6d20}
+}
