--- a/LSD/LSD_slides.tex
+++ b/LSD/LSD_slides.tex
@@ -219,23 +219,50 @@ Research fellow, Nethermind
     https://notes.ethereum.org/@launchpad/withdrawals-faq
 \end{frame}
 
-\begin{frame}{Protocol Response Mechanisms}
+\begin{frame}{Last resort}
     \begin{itemize}
-        \item Pause withdrawals (e.g. Lido's Bunker Mode)
-        \item Sell protocol assets (e.g. gov tokens) !!Might cause self-fulfilling prophecy!!
+        \item Pause/delay withdrawals (e.g. Lido's Bunker Mode)
+        \item Sell protocol assets (e.g. gov tokens) !!Might cause self-fulfilling prophecy of insolvency!!
     \end{itemize}
+    
 \end{frame}
 
 \begin{frame}{Systemic Risks}
     \begin{itemize}
-        \item Centralization of stake (esp. Lido): Nethermind Research and Lido are collaborating to solve this! Also DVT
+        \item Centralization of stake (esp. Lido): Nethermind Research and Lido are collaborating to solve this\footnotemark! Also DVT
         \item APR drop from excessive staking (block rewards do not scale linearly with ETH staked)
         \item ETH supply inflation if staking $>>$ usage (ETH minted $>>$ burned by EIP-1559)
     \end{itemize}
+
+    \footnotetext{See \href{https://medium.com/nethermind-eth/a-path-to-permissionless-liquid-staking-9934557f6d20}{``A Path to Permissionless Liquid Staking"} by Nethermind \& LidoDAO}
 \end{frame}
 
 %----------------
 \section[Rocket Pool Case Study]{Rocket Pool Case Study}
+
+\begin{frame}{Rocket Pool (rETH)}
+    \begin{figure}
+        \centering
+        \includegraphics[width=0.8\textwidth]{figures/rpl_logo.png}
+    \end{figure}
+    Rocket Pool is the 3rd largest LSD protocol by TVL and the largest \textbf{permissionless} LSD protocol.
+\end{frame}
+
+\begin{frame}{rETH Liquidity Analysis}
+    (Data as of Aug 26, 2023)
+    \begin{align*}
+        &\text{Balancer v2 rETH-WETH pool} & 12,893\Xi\\
+        &\text{Balancer v2 rETH-wstETH-sfrxETH pool} & 11,307\Xi\\
+        &\text{Curve v2 rETH-ETH pool} & 2,238\Xi\\
+        &\text{Uniswap v3 rETH-ETH pool} & 1,007\Xi\\
+        \hline
+        &\text{Total DEX Liquidity} & 27,445\Xi\\
+        &\text{Protocol Owned Liquidity (Deposit Pool)} & 18,000\Xi\\
+        \hline
+        &\text{Total Liquidity} & 45,445\Xi\\
+    \end{align*}
+    This is only 5\% of rETH supply (902,768$\Xi$), or 4\% if not counting other LSDs as liquidity.
+\end{frame}
 
 \begin{frame}{Rocket Pool Agent-Based Model \& Simulation}
     I've been building an agent-based simulation model for Rocket Pool to study and improve their protocol design. Areas I focused on include:\\
