Update LSD slides for SBC and ETHChi

--- a/LSD/LSD_slides_SBC.tex
+++ b/LSD/LSD_slides_SBC.tex
@@ -24,7 +24,7 @@ mathtools,mathrsfs}
 
 
 \title[LSD Bank Runs]{Post-Shanghai LSDs and Bank Run Risks}
-\subtitle{ETHChicago 2023}
+\subtitle{Science of Blockchain Conference - DFS Forum}
 \author[Mingxuan He]{
     Mingxuan He\\ 
     mingxuanh.eth
@@ -37,7 +37,7 @@ Research fellow, Nethermind
 }
 
 
-\date{Sep 17, 2023}
+\date{Sep 1, 2023}
 
 
 % table of contents page before each section (optional)
