--- a/ABM/references.bib
+++ b/ABM/references.bib
@@ -11,3 +11,10 @@
   year = {2022},
   url = {https://docs.uniswap.org/contracts/v2/concepts/protocol-overview/how-uniswap-works}
 }
+
+@misc{mesadocs,
+  title = {Mesa: Agent-based modeling in Python 3+},
+  author = {{Mesa}},
+  year = {2023},
+  url = {https://mesa.readthedocs.io/en/stable/index.html}
+}
