--- a/LSD/LSD_slides.tex
+++ b/LSD/LSD_slides.tex
@@ -66,6 +66,16 @@ Research fellow, Nethermind
 
 %----------------
 \section[Introduction]{Introduction to Ethereum Staking \& Liquid Staking}
+
+\begin{frame}{Disclaimers}
+    \begin{itemize}
+        \item \textbf{NFA:} This talk is for intended solely for educational and research purposes. It should not be construed as financial or investment advice.
+        \item \textbf{No financial ties:} I have no financial ties with any projects or tokens mentioned in this talk. I hold minimal amounts ($<$\$500) of LSDs.
+        \item \textbf{Views are my own} and do not represent the views of my institutions or employers.
+        \item \textbf{DYOR}
+    \end{itemize}
+\end{frame}
+
 \begin{frame}{History of Ethereum Staking}
 
     \begin{itemize}
@@ -301,7 +311,8 @@ Research fellow, Nethermind
 \end{frame}
 
 \begin{frame}{Thank You!}
-    
+    Slides available at \url{https://github.com/mingxuan-he/ethchi-talks}\\
+    \bigskip
     Twitter/Telegram: @MingXDynasty\\ 
     \bigskip
     I'm on the job market for 2024!
